live web-page on git-hub

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
   </head>
   <body>
     <h1>These are my assignments</h1>
+    <a href="./assignment-1.html">Assignment-1</a><br />
+    <a href="./assignment-2.html">Assignment-2</a><br />
+    <a href="./assignment3.html">Assignment-3</a>
   </body>
 </html>
