--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   </head>
   <body>
     <h1>These are my assignments</h1>
-    <a href="./assignment-1.html">Assignment-1</a><br />
-    <a href="./assignment-2.html">Assignment-2</a><br />
-    <a href="./assignment3.html">Assignment-3</a>
+    <a href="./assignment-1.html">Assignment-1</a> = Introduction of
+    Fullstack<br />
+    <a href="./assignment-2.html">Assignment-2</a> = Template of Html<br />
+    <a href="./assignment3.html">Assignment-3</a> = Live First Web-Page <br />
+    <a href="./index.html">Assignment-4</a> = Update index
   </body>
 </html>
