--- a/assignment-5.html
+++ b/assignment-5.html
@@ -6,5 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assignment-5</title>
   </head>
-  <body></body>
+  <body>
+    <img src="./Images/front-end.png" alt="" width="300" height="200" />
+    <!-- <img
+      src="./Images/front-end.png"
+      alt=""
+      style="width: 300px; height: 200px"
+    /> -->
+  </body>
 </html>
