done footer assignment

--- a/assignment-11.html
+++ b/assignment-11.html
@@ -5,6 +5,82 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assignment-11</title>
+    <link rel="stylesheet" href="./css/footer-style.css" />
   </head>
-  <body></body>
+  <body>
+    <section class="main-content">Assignment-11: Footer</section>
+    <footer>
+      <section class="sec-1">
+        <section class="about">
+          <h2>FOOTER CONTENT</h2>
+          <br />
+          <p>
+            Here you can use rows and columns to organize your footer content.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          </p>
+        </section>
+        <section class="link1">
+          <h2>LINKS</h2>
+          <br />
+          <ul>
+            <li><a href="#">Link 1</a></li>
+            <li><a href="#">Link 2</a></li>
+            <li><a href="#">Link 3</a></li>
+            <li><a href="#">Link 4</a></li>
+          </ul>
+        </section>
+        <section class="link2">
+          <h2>LINKS</h2>
+          <br />
+          <ul>
+            <li><a href="#">Link 1</a></li>
+            <li><a href="#">Link 2</a></li>
+            <li><a href="#">Link 3</a></li>
+            <li><a href="#">Link 4</a></li>
+          </ul>
+        </section>
+        <section class="link3">
+          <h2>LINKS</h2>
+          <br />
+          <ul>
+            <li><a href="#">Link 1</a></li>
+            <li><a href="#">Link 2</a></li>
+            <li><a href="#">Link 3</a></li>
+            <li><a href="#">Link 4</a></li>
+          </ul>
+        </section>
+      </section>
+      <hr width="100%" noshade />
+      <section class="sec-2">
+        <p>Register for Free</p>
+        <a href="#">SIGN UP!</a>
+      </section>
+      <hr width="100%" noshade />
+      <section class="sec-3">
+        <ul>
+          <li>
+            <a href="#"><i class="fa fa-facebook"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-goolge"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-linkedin"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-dribbble"></i></a>
+          </li>
+        </ul>
+      </section>
+      <section class="sec-4">
+        <span>&copy; 2020 Copyright:</span>
+        <a href="https://mdbootstrap.com/" style="color: lightgrey"
+          >MDBootstrap.com</a
+        >
+      </section>
+    </footer>
+  </body>
 </html>
