--- a/assignment-5.html
+++ b/assignment-5.html
@@ -7,7 +7,8 @@
     <title>Assignment-5</title>
   </head>
   <body>
-    <img src="./Images/front-end.png" alt="" width="300" height="200" />
+    <h2 style="text-align: center">Introduction to front-End Technologies</h2>
+    <img src="./Images/front-end.png" alt="" width="300" height="200"" />
     <!-- <img
       src="./Images/front-end.png"
       alt=""
