--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a href="./assignment3.html">Assignment-3</a> = Live First Web-Page <br />
     <a href="./index.html">Assignment-4</a> = Update index <br />
     <a href="./assignment-5.html">Assignment-5</a> = Image web in Web
-    Application <a href="./assignment-11.html">Assignment-11</a> = Responsive
-    Footer Template
+    Application <br /><a href="./assignment-11.html">Assignment-11</a> =
+    Responsive Footer Template
   </body>
 </html>
