--- a/assignment-6.html
+++ b/assignment-6.html
@@ -5,8 +5,107 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assignment-6</title>
+    <style>
+      #container {
+        background-color: lightgrey;
+      }
+      .title {
+        text-align: center;
+        color: white;
+      }
+      .introduction {
+        display: flex;
+      }
+      .box {
+        width: 300px;
+        height: 400px;
+        background-color: white;
+        overflow: hidden;
+        border: 2px solid whitesmoke;
+        margin: 10px;
+        border-radius: 10px;
+      }
+      .box img {
+        width: 100%;
+        height: 180px;
+      }
+      .box h2 {
+        text-align: center;
+      }
+      .box a {
+        display: block;
+        text-decoration: none;
+        background-color: red;
+        color: white;
+        padding: 10px 20px;
+        border-radius: 10px;
+      }
+      .box a:hover {
+        background-color: blue;
+      }
+      .box p {
+        text-align: justify;
+        margin: 10px;
+      }
+    </style>
   </head>
   <body>
-    <h1>Practical-6: CREATE FOLLOWING LAYOUT USING CSS LAYOUT PROPERTIES.</h1>
+    <div id="container">
+      <div class="title">
+        <h1>
+          Practical-6: CREATE FOLLOWING LAYOUT USING CSS LAYOUT PROPERTIES.
+        </h1>
+      </div>
+      <div class="introduction">
+        <div class="box">
+          <div class="image">
+            <img src="./Images/html.png" alt="" />
+          </div>
+          <h2>Introduction to HTML</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
+            aperiam incidunt soluta temporibus blanditiis aliquam,
+            exercitationem inventore quidem,libero provident quod!
+          </p>
+          <a href="#">Read More</a>
+        </div>
+        <div class="box">
+          <div class="image">
+            <img src="./Images/css3.png" alt="" />
+          </div>
+          <h2>Introduction to CSS</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
+            aperiam incidunt soluta temporibus blanditiis aliquam,
+            exercitationem inventore quidem,libero provident quod!
+          </p>
+          <a href="#">Read More</a>
+        </div>
+        <div class="box">
+          <div class="image">
+            <img src="./Images/jQuery.png" alt="" />
+          </div>
+          <h2>Introduction to jQuery</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
+            aperiam incidunt soluta temporibus blanditiis aliquam,
+            exercitationem inventore quidem,libero provident quod!
+          </p>
+          <a href="#">Read More</a>
+        </div>
+        <div class="box">
+          <div class="image">
+            <img src="./Images/bootstrap.png" alt="" />
+          </div>
+          <h2>Introduction to Bootstrap</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
+            aperiam incidunt soluta temporibus blanditiis aliquam,
+            exercitationem inventore quidem,libero provident quod!
+          </p>
+          <a href="#">Read More</a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
