update index.html for custom table template

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <a href="./assignment-5.html">Assignment-5</a> = Image web in Web
     Application <br />
     <a href="./assignment-11.html">Assignment-11</a> = Responsive Footer
-    Template
+    Template <br />
+    <a href="./assignment-13.html">Assignment-13</a> = Custom Table Template
   </body>
 </html>
